--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     {% block head %}
@@ -38,10 +38,10 @@
                     </li>
                     {% if current_user.is_authenticated %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="feedDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Feed
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu" aria-labelledby="feedDropdown">
                             <li><a class="dropdown-item" href="{{ url_for("challenges.challenges") }}">Challenges</a></li>
                             <li><a class="dropdown-item" href="{{ url_for("posts.posts") }}">Posts</a></li>
                         </ul>
@@ -59,10 +59,10 @@
                     <li class="nav-item">
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Admin
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu" aria-labelledby="adminDropdown">
                             {% if current_user.role == "admin" %}
                             <li><a class="nav-link" href="{{ url_for("admin.admin") }}">Admin Panel</a></li>
                             <li><a class="dropdown-item" href="{{ url_for("donate.create") }}">New Donation</a></li>
@@ -79,10 +79,10 @@
                     </li>
                     {% endif %}
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="usersDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Users
                         </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu" aria-labelledby="usersDropdown">
                             {% if current_user.is_authenticated and current_user.role=='user'%}
                             <li><a class="dropdown-item" href={{ url_for("users.profile") }}>Profile</a></li>
                             {% endif %}
