--- a/templates/calculator.html
+++ b/templates/calculator.html
@@ -4,7 +4,7 @@
     {{ super() }}
 
     {#  Import jQuery to make use of the AJAX query in calculator.js #}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     {# Import Chart.js to create a chart to preview the user's data #}
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.6.2/dist/chart.min.js"></script>
